--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,10 @@ h1.display-4 {
 	background-color: #525659;
 }
 
-#resume-background{
+#resume-background {
 	background-color: #525659;
+}
+
+#bike {
+	padding: 0 0 20px 0;
 }
